package Channels;

public interface IResponseChannel {
    void send(String message);
}